tests/reference/asr-continue_compilation_3-435a232.stderr
syntax error: Token '::' is unexpected here
 --> tests/errors/continue_compilation_3.f90:9:5
  |
9 | rea :: test_real(12)
  |     ^^ 

syntax error: Token ')' is unexpected here
  --> tests/errors/continue_compilation_3.f90:10:17
   |
10 | real :: test_re()
   |                 ^ 

syntax error: The LFortran pragma !LF$ must be followed by a space
  --> tests/errors/continue_compilation_3.f90:99:5
   |
99 |     !LF$unroll 4  ! Error: Missing space after `!LF$`
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Module 'continue_compilation_3_fake_module' not declared in the current source and the modfile was not found
 --> tests/errors/continue_compilation_3.f90:2:1
  |
2 | use continue_compilation_3_fake_module
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Empty array constructor is not allowed
  --> tests/errors/continue_compilation_3.f90:19:5
   |
19 | a = []
   |     ^^ 

semantic error: Empty array constructor is not allowed
  --> tests/errors/continue_compilation_3.f90:21:12
   |
21 | print *, [[[], [[]]], [[]], []]
   |            ^^ 

semantic error: Empty array constructor is not allowed
  --> tests/errors/continue_compilation_3.f90:22:12
   |
22 | print *, [[[], [[]]], []]
   |            ^^ 

semantic error: Rank mismatch in array reference: the array `b` has rank `1`, but is referenced as rank `2`
  --> tests/errors/continue_compilation_3.f90:24:1
   |
24 | b(:,:) = 1
   | ^^^^^^ 

semantic error: Rank mismatch in array reference: the array `b` has rank `1`, but is referenced as rank `2`
  --> tests/errors/continue_compilation_3.f90:25:1
   |
25 | b(:,:) = 2
   | ^^^^^^ 

semantic error: Type member xx is not an array so it cannot be indexed.
  --> tests/errors/continue_compilation_3.f90:27:1
   |
27 | y%xx(:) = 1
   | ^^^^^^^ 

semantic error: Rank mismatch in array reference: the array `str` has rank `1`, but is referenced as rank `2`
  --> tests/errors/continue_compilation_3.f90:29:1
   |
29 | str(1, 2)(:) = '1234'
   | ^^^^^^^^^^^^ 

semantic error: Rank mismatch in array reference: the array `str` has rank `1`, but is referenced as rank `3`
  --> tests/errors/continue_compilation_3.f90:30:1
   |
30 | str(1,2,3)(:) = '1234'
   | ^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
  --> tests/errors/continue_compilation_3.f90:32:10
   |
32 | print *, [character(*) :: "a", "b", "ball", "cat"]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Type-spec cannot contain an asterisk for a type parameter
  --> tests/errors/continue_compilation_3.f90:33:10
   |
33 | print *, [character(*) :: "a2", "b2", "ball2", "cat2"]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 1(3 and 2)
  --> tests/errors/continue_compilation_3.f90:35:1
   |
35 | x1 = reshape([1,2,3,4],[2,2])
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 1(3 and 1)
  --> tests/errors/continue_compilation_3.f90:36:1
   |
36 | x1 = reshape([1,2,3,4],[1,2])
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Arithmetic if (x) requires an integer or real for `x`
  --> tests/errors/continue_compilation_3.f90:40:5
   |
40 | if ("yy") 1, 2, 3
   |     ^^^^ 

semantic error: Incorrect number of arguments passed to the 'size' intrinsic. It accepts at least 1 and at most 3 arguments.
  --> tests/errors/continue_compilation_3.f90:47:5
   |
47 | i = size(a1, 1, 4, kind=4)
   |     ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Incorrect number of arguments passed to the 'size' intrinsic. It accepts at least 1 and at most 3 arguments.
  --> tests/errors/continue_compilation_3.f90:48:5
   |
48 | i = size()
   |     ^^^^^^ 

semantic error: Cannot assign to a constant variable
  --> tests/errors/continue_compilation_3.f90:50:1
   |
50 | x3 = 1
   | ^^^^^^ assignment here
   |
 7 | integer, parameter :: x3 = 2
   |                       ~~~~~~ declared as constant

semantic error: The end variable of the data implied do loop must be constants
  --> tests/errors/continue_compilation_3.f90:53:18
   |
53 | data(a1(i), i=1, k) / 1, 2, 3 /
   |                  ^ 

semantic error: The increment variable of the data implied do loop must be a constant
  --> tests/errors/continue_compilation_3.f90:55:21
   |
55 | data(a1(i), i=1, 3, k) / 1, 2, 3 /
   |                     ^ 

semantic error: The start variable of the data implied do loop must be constants
  --> tests/errors/continue_compilation_3.f90:57:15
   |
57 | data(a1(i), i=k, 3) / 1, 2, 3 /
   |               ^ 

semantic error: Variable 'foo' is not declared
  --> tests/errors/continue_compilation_3.f90:60:5
   |
60 | i = foo
   |     ^^^ 'foo' is undeclared

semantic error: Invalid argument `end` supplied
  --> tests/errors/continue_compilation_3.f90:62:1
   |
62 | rewind(end="world")
   | ^^^^^^^^^^^^^^^^^^^ 

semantic error: same_type_as is not implemented yet
  --> tests/errors/continue_compilation_3.f90:64:10
   |
64 | print *, same_type_as(1.0, 1.0)
   |          ^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Kind of all the arguments of Sign must be the same
  --> tests/errors/continue_compilation_3.f90:66:10
   |
66 | print *, sign(1, 1_8)
   |          ^^^^^^^^^^^^ 

semantic error: Argument 1 of dabs must be of double precision real type
  --> tests/errors/continue_compilation_3.f90:68:9
   |
68 | print*, dabs(1)
   |         ^^^^^^^ 

semantic error: Argument of `sqrt` has a negative argument
  --> tests/errors/continue_compilation_3.f90:70:10
   |
70 | print *, sqrt(-1.0)
   |          ^^^^^^^^^^ 

semantic error: Binary numeric operators cannot be used on strings
  --> tests/errors/continue_compilation_3.f90:72:10
   |
72 | print *, "a" + "b"
   |          ^^^^^^^^^ help: use '//' for string concatenation

semantic error: The first index in string section is less than 1
  --> tests/errors/continue_compilation_3.f90:75:15
   |
75 | print*, "s:", s(-1:4)
   |               ^^^^^^^ 

semantic error: Substring `start` is less than one
  --> tests/errors/continue_compilation_3.f90:77:9
   |
77 | print*, s1(-2:6)
   |         ^^^^^^^^ 

semantic error: Substring end index exceeds the string length
  --> tests/errors/continue_compilation_3.f90:80:9
   |
80 | print*, s1(1: 9)
   |         ^^^^^^^^ 

semantic error: Substring end index at must be of type integer
  --> tests/errors/continue_compilation_3.f90:82:14
   |
82 | print*, s1(1:5.2)
   |              ^^^ 

semantic error: Substring start index at must be of type integer
  --> tests/errors/continue_compilation_3.f90:84:12
   |
84 | print*, s1(1.1:5)
   |            ^^^ 

semantic error: Substring stride must be of type integer
  --> tests/errors/continue_compilation_3.f90:86:15
   |
86 | print*, s(1:5:2.2)
   |               ^^^ 

semantic error: Type mismatch in assignment, the types must be compatible
  --> tests/errors/continue_compilation_3.f90:88:1
   |
88 | x = "x"
   | ^   ^^^ type mismatch (integer(4) and string)

semantic error: Type mismatch in binary operator, the types must be compatible
  --> tests/errors/continue_compilation_3.f90:90:5
   |
90 | x = 5 + "x"
   |     ^   ^^^ type mismatch (integer(4) and string)

semantic error: Type mismatch in assignment, the types must be compatible
  --> tests/errors/continue_compilation_3.f90:90:1
   |
90 | x = 5 + "x"
   | ^       ^^^ type mismatch (integer(4) and string)

semantic error: Subroutine `bpe` called as a function
  --> tests/errors/continue_compilation_3.f90:93:5
   |
93 | i = bpe()
   |     ^^^^^ 

semantic error: Variable 'xx' is not declared
  --> tests/errors/continue_compilation_3.f90:94:10
   |
94 | print *, xx
   |          ^^ 'xx' is undeclared

semantic error: Variable 'test_re' is not declared
  --> tests/errors/continue_compilation_3.f90:95:1
   |
95 | test_re = 1245.13
   | ^^^^^^^ 'test_re' is undeclared

semantic error: Array reference is not allowed on scalar variable
  --> tests/errors/continue_compilation_3.f90:96:1
   |
96 | c(1) = 1
   | ^^^^ 

semantic error: Argument of `size` must be an array
   --> tests/errors/continue_compilation_3.f90:106:14
    |
106 |     print *, size(bpe)
    |              ^^^^^^^^^ 

semantic error: Variable 'd' is not declared
   --> tests/errors/continue_compilation_3.f90:107:11
    |
107 |     bpe = d
    |           ^ 'd' is undeclared

semantic error: Assignment to subroutine is not allowed
   --> tests/errors/continue_compilation_3.f90:107:5
    |
107 |     bpe = d
    |     ^^^ 
